feat: add sidecar metadata architecture for multi-target builds
Introduces a declarative system for target-specific transforms using
optional sidecar YAML files that override centralized defaults.

New files:
- src/config/targets.yaml: target definitions and defaults
- build/lib/sidecar.js: sidecar loading and transform utilities
- src/agents/pm.opencode.yaml: PM-specific OpenCode overrides
- src/skills/*/SKILL.cursor.yaml: Cursor globs per skill

Changes:
- build/build.js: loads targets.yaml, passes to builders
- All target builders updated to use sidecar system
- Removes hardcoded transforms from builders
- Generated outputs updated via npm run build

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Levi Figueira",
   "license": "MIT",
   "dependencies": {
+    "gray-matter": "^4.0.3",
     "yaml": "^2.3.4"
   }
 }
