--- a/src/config/targets.yaml
+++ b/src/config/targets.yaml
@@ -53,3 +53,8 @@ targets:
         # Truncate skill content in combined instructions file
         truncate:
           max_chars: 1500
+
+  codex:
+    output: dist/codex/
+    defaults:
+      skills: {}
