--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,8 @@ on:
     branches: [main]
     paths-ignore:
       - 'dist/**'
+      - 'plugins/**'
+      - '.claude-plugin/**'
       - '*.md'
   workflow_dispatch:
 
@@ -36,17 +38,17 @@ jobs:
       - name: Check for changes
         id: changes
         run: |
-          git add dist/
+          git add dist/ plugins/ .claude-plugin/
           if git diff --staged --quiet; then
             echo "changed=false" >> $GITHUB_OUTPUT
           else
             echo "changed=true" >> $GITHUB_OUTPUT
           fi
 
-      - name: Commit and push dist/
+      - name: Commit and push build outputs
         if: steps.changes.outputs.changed == 'true'
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git commit -m "build: update dist/"
+          git commit -m "build: update dist/ and plugins/"
           git push
