feat: add transcript archival for session context recovery
- Add transcripts field to session frontmatter schema
- Document .agents/transcripts/ directory for archived transcripts
- Update Resumption Prompt template with transcript archive instruction
- Add context-archiver agent for pre-compaction state preservation
- Add Transcript Archival section to orchestration skill Critical Rules
- Remove version from AGENTS.md and README.md (keep in package.json only)

--- a/src/config/hooks.yaml
+++ b/src/config/hooks.yaml
@@ -250,7 +250,7 @@ hooks:
       script: hooks/session/pre-compact-archive.sh
       event: PreCompact
       timeout: 60000
-      description: Warn about recently modified sessions before context compaction
+      description: Identify active sessions and prompt for context-archiver agent to preserve state
 
 # Legacy plugin groupings (kept for documentation purposes)
 # NOTE: Claude Code build now creates a single unified "apt" plugin
