feat: add product development workflow commands and skills
Implement a Research → Vision → Architecture → Requirements → Specs → Tasks → Session
workflow for structured product development.

New commands:
- /research - Project state assessment, brainstorming, vision evolution
- /architecture - Technical decisions and ADR creation
- /prd - Product requirements discovery
- /specs - Feature specification from requirements
- /tasks - Break specs into atomic work items (Linear or local)

New skill:
- research - Modes for project reflection, topic exploration, brainstorming

New orchestration references:
- product-development.md - Document hierarchy and workflow overview
- specs.md - Spec format, lifecycle, shaping methodology
- local-tasks.md - Task format and Linear/local abstraction

Updated:
- start-session.md - Task-coupled sessions with traceability, transcript archival
- orchestration SKILL.md - New topics and quick reference entries
- hooks.yaml - New commands and research skill in plugin-groups

--- a/src/config/hooks.yaml
+++ b/src/config/hooks.yaml
@@ -274,11 +274,18 @@ plugin-groups:
   orchestration:
     description: PM orchestration, session management, Linear workflow integration
     agents: [pm]
-    skills: [orchestration]
-    commands: [start-session, resume-session, review-sessions, council-session, reference-session]
+    skills: [orchestration, research]
+    commands: [start-session, resume-session, review-sessions, council-session, reference-session, research, architecture, prd, specs, tasks]
     related-hooks:
       pre-tool: [validate-commit, detect-linear-magic]
       session: [session-start, session-end, pre-compact-archive]
+
+  # Research - Project reflection and brainstorming
+  research:
+    description: Project state assessment, topic exploration, brainstorming, vision evolution
+    agents: []
+    skills: [research]
+    commands: [research]
 
   # Quality - Cross-language fundamentals
   foundations:
