docs: add development guidelines and update symlinks
Add .agents/AGENTS.md:
- Skill naming conventions (gerund/noun-phrase form)
- Description best practices (third-person, action verbs)
- Agent Skills standard vs Claude-specific field separation
- Reference file organization guidelines
- Build verification checklist
- Anti-patterns to avoid

Update symlinks:
- CLAUDE.md -> .agents/AGENTS.md
- .claude/CLAUDE.md -> ../.agents/AGENTS.md

Remove redundant root AGENTS.md
Update README.md link to new location

--- a/.gitignore
+++ b/.gitignore
@@ -22,8 +22,9 @@ Thumbs.db
 *.swp
 *.swo
 
-# Local agent sessions
+# Local agent sessions (except AGENTS.md guidelines)
 .agents/
+!.agents/AGENTS.md
 
 # Environment files
 .env
